--- a/JS Basico/index.html
+++ b/JS Basico/index.html
@@ -8,6 +8,6 @@
     <title>Conceitos Básicos</title>
   </head>
   <body>
-    <script type="text/javascript" src="array.js"></script>
+    <script type="text/javascript" src="objetos.js"></script>
   </body>
 </html>
